--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -152,7 +152,8 @@ h1.letra-bold,
 h2.letra-bold,
 h3.letra-bold,
 h4.letra-bold,
-p.letra-bold {
+p.letra-bold,
+span.letra-bold {
   font-weight: 700;
 }
 
@@ -3105,11 +3106,15 @@ i.azul {
 
 /********************** Estilos gestor base ***********************/
 .contenedor-grid-gestor {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
-  padding-inline: 24px;
+  /* padding-inline: 24px; */
+  margin-inline: 24px;
   flex: 1;
   overflow: auto;
+  /* border: 2px solid var(--color-primario); */
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 
 .contenedor-grid-gestor.autorizacion-comprobantes {
@@ -3120,7 +3125,7 @@ i.azul {
   display: flex;
   justify-content: right;
   align-items: center;
-  gap: 14px;
+  gap: 10px;
   white-space: nowrap;
 }
 
@@ -4533,4 +4538,66 @@ button:disabled.boton-agregar-item i {
 .vista-web .contenedor-generico-web.con-padding-base {
   padding-inline: 32px;
   padding-block: 16px;
+}
+
+
+/*****************************************************************/
+/************************ Estilo de tabla ************************/
+/*****************************************************************/
+
+
+.styled-table {
+  border-collapse: collapse;
+  font-size: 12px;
+  position: relative;
+  /* min-width: 400px; */
+  /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); */
+}
+
+.styled-table thead {
+  position: sticky;
+  top: 0;
+}
+
+.styled-table thead tr {
+  background-color: var(--color-primario);
+  text-align: left;
+}
+
+.styled-table thead tr th {
+  color: var(--color-blanco);
+}
+
+.styled-table th,
+.styled-table td {
+  padding: 12px 15px;
+}
+
+
+.styled-table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+/* .styled-table tbody tr:last-of-type {
+  border-bottom: 1px solid #009879;
+} */
+
+/* .styled-table tbody tr.active-row {
+  color: var(--color-primario-50);
+} */
+
+.styled-table tbody tr:hover {
+  background-color: var(--color-primario-50);
+}
+
+.texto-elipsis {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
